# keep-awake-rs

./: Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml
examples/: test.rs
objc/: prevent.m
src/: android.rs  ios.rs  lib.rs  linux.rs  macos.rs  windows.rs
