[package]
name = "keep-awake"
version = "0.1.0"
authors = ["Sami Mäkelä <mrsmkl@gmail.com>"]
edition = "2018"

[target.'cfg(target_os="linux")'.dependencies]
"dbus" = "0.9.0"

[target.'cfg(target_os="windows")'.dependencies]
winapi = { version = "0.3", features= ["winnt", "winbase"] }

[target.'cfg(target_os="macos")'.dependencies]
libc = "0.2"
mach = "0.1.1"
core-foundation = "0.9.1"
