[package]
name = "keep-awake"
version = "0.1.0"
authors = ["Sami Mäkelä <mrsmkl@gmail.com>"]
edition = "2021"

[target.'cfg(target_os="linux")'.dependencies]
"zbus" = "3.0.0"

[target.'cfg(target_os="windows")'.dependencies]
windows = { version = "0.40", features = ["Win32_System_Power"] }

[target.'cfg(target_os="macos")'.dependencies]
libc = "0.2"
mach = "0.3.2"
core-foundation = "0.9.3"
